[project]
name = "xgb-icu-master"
version = "0.1.0"
description = "XGBoost ICU Hypotension Prediction Model"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn",
    "lime",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "plotly",
    "shap",
    "streamlit",
    "xgboost",
]
